zabbix/overlays/prod/patch-db-host.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zabbix-server
spec:
  template:
    spec:
      containers:
        - name: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web
spec:
  template:
    spec:
      containers:
        - name: web
