zabbix/overlays/prod/patch-storage.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  volumeClaimTemplates:
    - metadata: { name: data }
      spec:
        resources:
          requests:
            storage: 200Gi
